# src/constants.ts
@@ -1,0 +1,8 @@
+export const apiUrls = {
+    posts: '/api/posts',
+    tags: '/api/tags',
+    docs: '/api-docs',
+    static: '/api/static',
+    upload: '/api/upload',
+    deleteCover: '/api/delete-cover/:fileName',
+}
